test/tests/stages/14_pointers/valid/libraries/global_pointer_client.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[3]: 
    CVarDecl: 
      CVariableDeclaration: 
        TIdentifier: d_ptr
        None: 
        Pointer: 
          Double: 
        CExtern: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: update_thru_ptr
        List[1]: 
          TIdentifier: new_val
        None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[1]: 
            Double: 
          Int: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[4]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: d
                  CSingleInit: 
                    CConstant: 
                      CConstDouble: 
                        TDouble: 0.000000
                      None: 
                    None: 
                  Double: 
                  None: 
            CS: 
              CExpression: 
                CAssignment: 
                  None: 
                  CVar: 
                    TIdentifier: d_ptr
                    None: 
                  CAddrOf: 
                    CVar: 
                      TIdentifier: d
                      None: 
                    None: 
                  None: 
            CS: 
              CExpression: 
                CFunctionCall: 
                  TIdentifier: update_thru_ptr
                  List[1]: 
                    CConstant: 
                      CConstDouble: 
                        TDouble: 10.000000
                      None: 
                  None: 
            CS: 
              CReturn: 
                CBinary: 
                  CEqual: 
                  CVar: 
                    TIdentifier: d
                    None: 
                  CConstant: 
                    CConstDouble: 
                      TDouble: 10.000000
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
